# nix-issue-32631

package-with-internal-lib/: Lib.hs  default.nix  package-with-internal-lib.cabal
package-with-internal-lib/internal/: Internal.hs
test-user/: Main.hs  default.nix  test-user.cabal
