name:                test-user
version:             0.1.0.0
license:             BSD3
author:              Matthew Harm Bekkema
maintainer:          mbekkema97@gmail.com
category:            Demonstration
build-type:          Simple
cabal-version:       >=2

executable test-user
  main-is:             Main.hs
  build-depends:       base >=4.9 && <4.11
                     , package-with-internal-lib
  default-language:    Haskell2010
